# rust-download-sdk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci-test.yml
examples/: download.rs  flash_download.rs  multipart_download.rs
src/: config.rs  dot.rs  download.rs  host_selector.rs  lib.rs  query.rs  req_id.rs
src/async_api/: cache_dir.rs  dot.rs  download.rs  host_selector.rs  mod.rs  query.rs  req_id.rs  retrier.rs  sync.rs
src/base/: base64.rs  credential.rs  download.rs  mod.rs  upload_policy.rs  upload_token.rs
src/config/: configurable.rs  http_client.rs  mod.rs  multi_clusters.rs  single_cluster.rs  static_vars.rs  watcher.rs
src/sync_api/: cache_dir.rs  dot.rs  download.rs  host_selector.rs  mod.rs  query.rs  req_id.rs
