[package]
name = "qiniu-download"
version = "2.0.0"
description = "Qiniu Resource (Cloud) Download SDK for Rust."
authors = ["Bachue Zhou <zhourong@qiniu.com>", "longbai <baishunlong@qiniu.com>", "qiniusdk <sdk@qiniu.com>"]
documentation = "https://docs.rs/qiniu-download"
repository = "https://github.com/qiniu/rust-download-sdk"
readme = "README.md"
edition = "2018"
keywords = ["qiniu", "storage", "sdk", "cloud"]
license = "MIT"

[dependencies]
base64 = "0.13.0"
sha-1 = "0.10.0"
url = "2.2.2"
hmac = "0.12.0"
reqwest = { version = "0.11.9", features = ["blocking", "json", "stream"] }
once_cell = "1.9.0"
positioned-io = "0.2.2"
rand = "0.8.4"
multipart = { version = "=0.17.3", package = "qiniu-multipart", default-features = false, features = ["client", "server"] }
text_io = "0.1.8"
dashmap = { version = "5.1.0", features = ["serde", "raw-api"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
directories = "4.0.1"
log = "0.4.14"
toml = "0.5.8"
tap = "1.0.1"
notify = "4.0.17"
fd-lock = "3.0.2"
anyhow = "1.0.52"
thiserror = "1.0.30"
tokio = { version = "1.15.0", default-features = false, features = ["fs", "sync", "parking_lot", "rt"] }
hyper = { version = "0.14.16", default-features = false, features = ["tcp", "http1", "http2", "client", "runtime"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
crc32fast = "1.3.0"
atomic_once_cell = "0.1.2"
futures = "0.3.19"
mime = "0.3.16"
multer = "2.0.2"
async-trait = "0.1.52"
async-once-cell = "0.3.0"

[dev-dependencies]
warp = { version = "0.3.2", default-features = false, features = ["multipart"] }
tokio = { version = "1.15.0", features = ["macros", "time"] }
env_logger = "0.9.0"
tempfile = "3.3.0"
rayon = "1.5.1"
