[package]
name = "qiniu-download"
version = "2.0.2"
description = "Qiniu Resource (Cloud) Download SDK for Rust."
authors = [
    "Bachue Zhou <zhourong@qiniu.com>",
    "longbai <baishunlong@qiniu.com>",
    "qiniusdk <sdk@qiniu.com>",
]
documentation = "https://docs.rs/qiniu-download"
repository = "https://github.com/qiniu/rust-download-sdk"
readme = "README.md"
keywords = ["qiniu", "storage", "sdk", "cloud"]
license = "MIT"
edition = "2021"
rust-version = "1.60"

[dependencies]
base64 = "0.13.1"
sha-1 = "0.10.1"
hmac = "0.12.1"
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream"] }
once_cell = "1.18.0"
positioned-io = "0.2.2"
rand = "0.8.5"
multipart = { version = "=0.17.3", package = "qiniu-multipart", default-features = false, features = [
    "client",
    "server",
] }
text_io = "0.1.12"
dashmap = { version = "5.5.3", features = ["serde", "raw-api"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
directories = "4.0.1"
log = "0.4.20"
toml = "0.5.11"
tap = "1.0.1"
notify = "4.0.17"
fd-lock = "3.0.13"
anyhow = "1.0.75"
thiserror = "1.0.50"
tokio = { version = "1.33.0", default-features = false, features = [
    "fs",
    "sync",
    "parking_lot",
    "rt",
] }
hyper = { version = "0.14.27", default-features = false, features = [
    "tcp",
    "http1",
    "http2",
    "client",
    "runtime",
] }
tokio-util = { version = "0.6.10", features = ["compat"] }
crc32fast = "1.3.2"
futures = "0.3.29"
mime = "0.3.17"
multer = "2.1.0"
async-trait = "0.1.74"
async-once-cell = "0.3.1"
scc = "2.0.3"

[dev-dependencies]
warp = { version = "0.3.6", default-features = false, features = ["multipart"] }
tokio = { version = "1.33.0", features = ["macros", "time"] }
env_logger = "0.9.3"
tempfile = "3.8.1"
rayon = "1.8.0"
